--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="twoPoints">+2 points</string>
     <string name="onePoints">free throw</string>
     <string name="teamB">Team B</string>
+    <string name="reset">reset</string>
 </resources>
